# xsens_mvn_ros_msgs

./: CMakeLists.txt  LICENSE  package.xml
msg/: LinkStateArray.msg
